# oapi-sdk-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md
.github/: pull_request_template.md
.github/workflows/: add-project-overview.yml  ci.yml  generate-lock.yml  import-rc.yml  import-source-url.yml  import-source.yml  release.yml
.import/: URL_READY  chunk-000  chunk-001  chunk-002  chunk-003  chunk-004  chunk-005  chunk-006  chunk-007  chunk-008  chunk-009  part-000  part-001  part-002  part-003  part-004  payload-003
docs/: ARCHITECTURE.md  CI_VALIDATION.md  COMPATIBILITY.md  ROADMAP.md  VALIDATION.md  create-an-app-in-one-click-rust.md
examples/create-an-app-in-one-click-rust/: .env.example  Cargo.toml
examples/create-an-app-in-one-click-rust/src/: main.rs
src/: client.rs  lib.rs
src/core/: auth.rs  cache.rs  config.rs  error.rs  mod.rs  request.rs  response.rs
src/event/: mod.rs
src/registration/: mod.rs
src/service/: mod.rs
src/service/im/: mod.rs
src/service/im/v1/: message.rs  mod.rs
