[package]
name = "lark-oapi"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Async Rust SDK for the Feishu/Lark Open Platform, including one-click app registration"
license = "MIT"
repository = "https://github.com/partme-ai/oapi-sdk-rust"
homepage = "https://github.com/partme-ai/oapi-sdk-rust"
documentation = "https://docs.rs/lark-oapi"
readme = "README.md"
keywords = ["feishu", "lark", "openapi", "sdk", "bot"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "README.zh-CN.md",
    "LICENSE",
    "NOTICE",
    "CONTRIBUTING.md",
    "docs/**",
    "examples/create-an-app-in-one-click-rust/**",
]

[workspace]
members = ["examples/create-an-app-in-one-click-rust"]
resolver = "2"

[features]
default = ["rustls-tls", "registration", "events"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
registration = ["dep:flate2"]
events = ["dep:aes", "dep:cbc", "dep:hex", "dep:sha2", "dep:subtle"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
flate2 = { version = "1", optional = true }
http = "1"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
url = "=2.4.1"

# Event callback support
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true, features = ["alloc"] }
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
