[package]
name = "create-an-app-in-one-click-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
dotenvy = "0.15"
lark-oapi = { path = "../..", default-features = false, features = ["rustls-tls", "registration"] }
qrcode = { version = "0.14", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
